src/objects/PBS_Building__c.object
<CustomObject>
    <description>PBS Common Building Object</description>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Override_Ind__c</fullName>
        <label>Address Override Ind</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validated_Ind__c</fullName>
        <label>Address Validated Ind</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bld_Building_Uk1__c</fullName>
        <label>Bld Building Uk1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_GSF__c</fullName>
        <label>Building GSF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_ID__c</fullName>
        <externalId>true</externalId>
        <label>Building ID</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Building_Name__c</fullName>
        <label>Building Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_RSF__c</fullName>
        <label>Building RSF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_RU__c</fullName>
        <label>Building RU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_USF__c</fullName>
        <label>Building USF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBSA_Code__c</fullName>
        <label>CBSA Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSA_Title__c</fullName>
        <label>CBSA Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSA_Type__c</fullName>
        <label>CBSA Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCSR_ID__c</fullName>
        <label>CCSR ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Central_Bus_Unit_Ind__c</fullName>
        <label>Central Bus Unit Ind</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Code__c</fullName>
        <label>Class Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Congressional_District_Name__c</fullName>
        <label>Congressional District Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Congressional_District__c</fullName>
        <label>Congressional District</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construct_Complete_Date__c</fullName>
        <label>Construct Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>County_City_Code__c</fullName>
        <label>County City Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_Ind__c</fullName>
        <label>Delete Ind</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Gross_Sqft__c</fullName>
        <label>Est Gross Sqft</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Parking_Spaces__c</fullName>
        <label>Est Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facility_Id__c</fullName>
        <label>Facility Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Federal_Leased_Code__c</fullName>
        <label>Federal Leased Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Office_Code__c</fullName>
        <label>Field Office Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frpc_Mission_Depend_Code__c</fullName>
        <label>Frpc Mission Depend Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frpc_Prop_Type_Code__c</fullName>
        <label>Frpc Prop Type Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frpc_Real_Prop_Type_Code__c</fullName>
        <label>Frpc Real Prop Type Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frpc_Real_Prop_Use_Code__c</fullName>
        <label>Frpc Real Prop Use Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frpc_Value_Date__c</fullName>
        <label>Frpc Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frpc_Value__c</fullName>
        <label>Frpc Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLC_Code__c</fullName>
        <label>GLC Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Land_Acres__c</fullName>
        <label>Land Acres</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>17</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Code_Plus__c</fullName>
        <externalId>true</externalId>
        <label>Location Code Plus</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location_Will_Close_Dt__c</fullName>
        <label>Location Will Close Dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>17</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Zero_Sqft_Esmart_Own_Ind__c</fullName>
        <label>Non Zero Sqft Esmart Own Ind</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupancy_Right_Code__c</fullName>
        <label>Occupancy Right Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking_Esmart_Own_Ind__c</fullName>
        <label>Parking Esmart Own Ind</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predominant_Use_Code__c</fullName>
        <label>Predominant Use Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <label>Region Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Created_By__c</fullName>
        <label>Source Created By</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Created_Ts__c</fullName>
        <label>Source Created Ts</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source_Parent_ID__c</fullName>
        <label>Source Parent ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Updated_By__c</fullName>
        <label>Source Updated By</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Updated_Ts__c</fullName>
        <label>Source Updated Ts</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Spl_Bld_Flg__c</fullName>
        <label>Spl Bld Flg</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Code__c</fullName>
        <label>Team Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Floors__c</fullName>
        <label>Total Number Of Floors</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Personnel__c</fullName>
        <label>Total Personnel</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Status_Code__c</fullName>
        <label>Transaction Status Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zero_Sqft_Esmart_Own_Ind__c</fullName>
        <label>Zero Sqft Esmart Own Ind</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>PBS Building</label>
    <nameField>
        <displayFormat>PBS-BLDG-{000000000}</displayFormat>
        <label>PBS Building Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBS Buildings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>